style.css
body {
    font-family: Roboto, Oxygen, Ubuntu, sans-serif;
    min-height: 100vh;
    margin: 0;
    display: flex;
    flex-direction: column;
}

.upper-section {
    background-color: #1f2937;
    color: white; 
    height: 400px;
    padding: 10px 100px 100px 100px;
    
}

.header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 100px;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight: 600;
}

ul {
    list-style-type: none;
    display: flex;
    margin: 0;
    padding: 0;
    gap: 16px;
    font-size: 18px;
}

.hero {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.sub-hero {
    font-size: 18px;
    color: #e5e7eb;
}

.title-section {
    display: flex;
}

.title-section img {
    max-width: 35%;
    height: auto;
    margin-left: 160px
}

.hero-text {
    display: flex;
    flex-direction: column;
    gap: 8px
}

button {
    border-radius: 6px;
    background-color: #3882f6;
    color: #f9faf8;
    padding: 4px 24px;
    border-color:#3882f6;
    font-weight: 600;
}

.midsection {
    display: flex;
    height: 400px;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

.info {
    display: flex;
    justify-content: center;
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    margin: 50px 0 -60px;
}

.pic-content img {
    width: 100px;
    height: 100px;
    border: 3px solid #3882f6;
    border-radius: 15%;
    
}

.pic-content {
    font-size: 10px;
    text-align: center;
    max-width: 100px;
}

.quote-section {
    background-color: #e5e7eb;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;

}

.quote p {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    max-width: 580px;
    margin-bottom: 0;
}

#signature {
    font-weight: bold;
    display: flex;
    justify-content: flex-end
}

.button-section {
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.button-container {
    background-color: #3882f6;
    display: flex;
    gap: 200px;
    padding: 30px 80px;
    color: aliceblue;    
    border-radius: 8px;
    flex-shrink: 1;
}

#subtext {
    font-size: 10px;
}

.button-section button {
    border: 2px solid 
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
    background-color: #1f2937;
    color:#f9faf8;
    font-size: 12px;
    font-weight: 600;
}

